🌿 Improvements